--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -407,7 +407,7 @@ function onStart()
       },
     });
 
-    {# (function(){
+    (function(){
 
         var formContainer = document.querySelector('.content.form');
         var uploadBtnTriggerer = formContainer.querySelector('.btn-upload');
@@ -540,7 +540,7 @@ function onStart()
 
 
     })();
- #}
+
 
 
 
