--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -352,7 +352,7 @@ function onStart()
         </div>
     </div>
 
-    <div class="content form" style="background-image: url('{{ imgPath }}/forest-bloc/forest.png')">
+    <div class="content form" style="background-image: url('{{ imgPath }}/forest-bloc/forest.png'); background-attachment:scroll">
         <div class="container is-why">
             <div class="row why-container">
               <div class="item">
