--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -494,17 +494,20 @@ function onStart()
             var container = document.getElementById('page-nosforets');
             var content_intro = container.querySelector('.content.intro')
             var medias = container.querySelector('.Medias')
+            var before_form = container.querySelector('.before-form')
             
 
             if (isNotVisible){
                 headerVideoBtn.style.display = 'flex';
                 content_intro.style.display = 'block';
                 medias.style.display = 'block';
+                before_form.style.display = 'block';
             }
             else{
                 headerVideoBtn.style.display = 'none';
                 content_intro.style.display = 'none'
                 medias.style.display = 'none';
+                before_form.style.display = 'none';
             }
         })
 
