--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -1,7 +1,7 @@
 title = "forest"
-url = "/nosforets"
-is_hidden = 0
+url = "/jycrois"
 layout = "default"
+is_hidden = 0
 
 [viewBag]
 localeUrl[en] = "/forest"
@@ -253,7 +253,6 @@ function onStart()
 }
 ?>
 ==
-
 {% set imgPath = '/themes/cifq/assets/public/images' %}
 {% set videoPath = '/themes/cifq/assets/public/videos' %}
 
