Update intro text

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -21,8 +21,7 @@ function onStart()
 
     if ($locale == "fr") {
         $this['header'] = [
-          'intro' => 'Plus vertes que jamais, nos forêts sont source de fierté et d’innovations.
-          Elles représentent près de 50 % de notre territoire et méritent 100 % de notre appui.',
+          'intro' => 'Plus vertes que jamais, nos forêts sont source de fierté et d’innovations. Elles représentent près de 50 % de notre territoire et méritent 100 % de notre appui.',
           'more' => 'En savoir plus'
         ];
 
@@ -136,8 +135,7 @@ function onStart()
 
     } else if ($locale == "en") {
       $this['header'] = [
-          'intro' => 'Plus vertes que jamais, nos forêts sont source de fierté et d’innovations.
-          Elles représentent près de 50 % de notre territoire et méritent 100 % de notre appui.',
+          'intro' => 'Plus vertes que jamais, nos forêts sont source de fierté et d’innovations. Elles représentent près de 50 % de notre territoire et méritent 100 % de notre appui.',
           'more' => 'En savoir plus'
         ];
 
