--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -261,7 +261,8 @@ function onStart()
     <div class="header" style="background-image: url('{{ imgPath }}/new_header_home.png')">
 
         <div class="fullscreen-bg">
-            <video src="{{ videoPath }}/SECTEUR_FORESTIER_60SEC_1080p_ONLINE_SS_SUPERS.mp4" autoplay="autoplay" muted="muted" loop="loop" class="fullscreen-bg__video"></video> 
+            <video src="{{ videoPath }}/SECTEUR_FORESTIER_60SEC_1080p_ONLINE_SS_SUPERS.mp4" autoplay="autoplay" muted="muted" loop="loop" class="fullscreen-bg__video"></video>
+            <div class="fullscreen-bg-mask"></div>
         </div>
 
         <div class="container">
