modif url video

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -81,7 +81,7 @@ function onStart()
               'name' => 'Normand Simard',
               'description' => 'Ingénieur forestier et directeur des approvisionnements',
               'image' => '/sliders/Normand Simard_0529.jpg',
-              'video' => 'Mn1-cwcLBQo'
+              'video' => 'Fu92NPKNjhY'
             ],
             'slide2' => [
               'quote' => 'Développer le secteur forestier, c’est harmoniser les préoccupations humaines et environnementales.',
