modif url video

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -81,13 +81,14 @@ function onStart()
               'name' => 'Normand Simard',
               'description' => 'Ingénieur forestier et directeur des approvisionnements',
               'image' => '/sliders/Normand Simard_0529.jpg',
-              'video' => 'Fu92NPKNjhY'
+              'video' => 'Mn1-cwcLBQo'
             ],
             'slide2' => [
               'quote' => 'Développer le secteur forestier, c’est harmoniser les préoccupations humaines et environnementales.',
               'name' => 'Alhassane A. Diallo',
               'description' => 'Coordonnateur environnement et foresterie',
-              'image' => '/sliders/Alhassanea Diallo_1071.jpg'
+              'image' => '/sliders/Alhassanea Diallo_1071.jpg',
+              'video' => 'Fu92NPKNjhY'
             ],
             'slide3' => [
               'quote' => 'La forêt québécoise, ce n’est pas que du bois : c’est une source de fierté.',
