Update slider translations

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -192,6 +192,66 @@ function onStart()
           ]
         ];
 
+        $this['sliders'] = [
+          'slide1' => [
+              'quote' => 'The forest is a vast, endlessly renewable garden.',
+              'name' => 'Normand Simard',
+              'description' => 'Forest Engineer and Supply Manager',
+              'image' => '/sliders/Normand Simard_0529.jpg',
+              'video' => 'Mn1-cwcLBQo'
+            ],
+            'slide2' => [
+              'quote' => 'Developing the forest sector involves harmonizing human and environmental concerns.',
+              'name' => 'Alhassane A. Diallo',
+              'description' => 'Environment and Forestry Coordinator',
+              'image' => '/sliders/Alhassanea Diallo_1071.jpg',
+              'video' => 'Fu92NPKNjhY'
+            ],
+            'slide3' => [
+              'quote' => 'Québec’s forest is more than just wood – it’s a source of pride.',
+              'name' => 'Yvon Soucy',
+              'description' => 'Warden, Kamouraska RCM',
+              'image' => '/sliders/Yvon Soucy_0376.jpg',
+              'video' => 'y4be-_gDrPU'
+            ],
+            'slide4' => [
+              'quote' => 'The forest has always been part of my life and I want to do something to make sure it remains there for many years to come.',
+              'name' => 'Élie Duchesne',
+              'description' => 'Student Surveyor',
+              'image' => '/sliders/Elie Duchesne_GA_0981.jpg'
+            ],
+            'slide5' => [
+              'quote' => 'I’m proud to pass on my passion to my students, by helping them to discover a sector rich in challenges and opportunities.',
+              'name' => 'Vanessa Auger',
+              'description' => 'Forestry Technician and Teacher',
+              'image' => '/sliders/Vanessa Auger _9617.jpg'
+            ],
+            'slide6' => [
+              'quote' => 'Technological progress continues to improve the conditions of the workers who play such a key role in forestry practice.',
+              'name' => 'Pierre Godin',
+              'description' => 'Pedestal Machine Mechanic',
+              'image' => '/sliders/Pierre Godin_1267.jpg'
+            ],
+            'slide7' => [
+              'quote' => 'We must look after our forest because it represents our future! ',
+              'name' => 'Karine Lévesque',
+              'description' => 'Finishing Room Operator, in charge of roll packing',
+              'image' => '/sliders/Karine Levesque_8970.jpg'
+            ],
+            'slide8' => [
+              'quote' => 'It’s our responsibility to make sure ecosystem sustainability is a priority in every aspect of our work.',
+              'name' => 'Nadia Vaillancourt',
+              'description' => 'Biologist, Professional Picker and Naturalist-Animator',
+              'image' => '/sliders/Nadia Vaillancourt_0675.jpg'
+            ],
+            'slide9' => [
+              'quote' => 'If we want to enrich our region, we must take care of its resources and respect the different ways in which they are used.',
+              'name' => 'Jean-Maurice Matte',
+              'description' => 'Mayor of Senneterre',
+              'image' => '/sliders/7696-UMQ_3984_JeanMaurice_Matte.jpg'
+            ]
+        ];
+
 
       }
 }
