--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -20,6 +20,13 @@ function onStart()
     $locale = $this->translator->getLocale();
 
     if ($locale == "fr") {
+
+        $this['signature'] = [
+          'title1' => '{{ imgPath }}/forest-title.png',
+          'title2' => '{{ imgPath }}/titre2.png',
+          'title3' => '{{ imgPath }}/titre3.png'
+        ];
+
         $this['header'] = [
           'intro' => 'Plus vertes que jamais, nos forêts sont source de fierté et d’innovations. Elles représentent près de 50 % de notre territoire et méritent 100 % de notre appui.',
           'more' => 'En savoir plus'
@@ -136,6 +143,13 @@ function onStart()
         ];
 
       } else if ($locale == "en") {
+
+        $this['signature'] = [
+          'title1' => '{{ imgPath }}/forest-title.png',
+          'title2' => '{{ imgPath }}/titre2.png',
+          'title3' => '{{ imgPath }}/titre3.png'
+        ];
+
         $this['header'] = [
           'intro' => 'Our forests are greener than ever before, and are a source of pride and innovation.
           They account for nearly 50% of our territory and deserve 100% of our support.',
@@ -275,9 +289,9 @@ function onStart()
             <div class="row">
                 <div class="grid-full">
                     <div class="signature main-title">
-                        <img class="title is-1" src="{{ imgPath }}/forest-title.png" />
-                        <img class="title is-2" src="{{ imgPath }}/titre2.png" />
-                        <img class="title is-3" src="{{ imgPath }}/titre3.png" />
+                        <img class="title is-1" src="{{ signature.title1 }}" />
+                        <img class="title is-2" src="{{ signature.title2 }}" />
+                        <img class="title is-3" src="{{ signature.title3 }}" />
                     </div>
 
                     <p class="intro">
