Update english images

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -145,9 +145,9 @@ function onStart()
       } else if ($locale == "en") {
 
         $this['signature'] = [
-          'title1' => '/forest-title.png',
-          'title2' => '/titre2.png',
-          'title3' => '/titre3.png'
+          'title1' => '/en/title1.png',
+          'title2' => '/en/title2.png',
+          'title3' => '/en/title3.png'
         ];
 
         $this['header'] = [
