Add card 1 english

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -49,6 +49,7 @@ function onStart()
             'know' => 'Saviez-vous que...'
           ],
           'card1' => [
+            'image' => '/forest-bloc/forest-card-1.png',
             'label' => 'Près de 50 % du territoire québécois est recouvert de forêt'
           ],
           'card2' => [
@@ -165,6 +166,7 @@ function onStart()
             'know' => 'Saviez-vous que...'
           ],
           'card1' => [
+            'image' => '/forest-bloc/en/forest-card-1.png',
             'label' => 'Près de 50 % du territoire québécois est recouvert de forêt'
           ],
           'card2' => [
@@ -370,7 +372,7 @@ function onStart()
 
               <div class="grid-third">
                   <div class="signature">
-                      <img src="{{ imgPath }}/forest-bloc/forest-card-1.png" />
+                      <img src="{{ imgPath }}{{facts.card1.image}}" />
                   </div>
 
                   <div class="intro ">
