Add vanessa video

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -108,7 +108,8 @@ function onStart()
               'quote' => 'Je suis fière de transmettre ma passion à mes étudiants, car je leur permets de découvrir un secteur riche en défis et en opportunités.',
               'name' => 'Vanessa Auger',
               'description' => 'Technicienne forestière et enseignante',
-              'image' => '/sliders/Vanessa Auger _9617.jpg'
+              'image' => '/sliders/Vanessa Auger _9617.jpg',
+              'video' => 'wNjjK4C1LHA'
             ],
             'slide6' => [
               'quote' => 'Les avancées technologiques améliorent constamment les conditions des travailleurs, qui sont au cœur des pratiques forestières.',
@@ -223,8 +224,9 @@ function onStart()
             'slide5' => [
               'quote' => 'Je suis fière de transmettre ma passion à mes étudiants, car je leur permets de découvrir un secteur riche en défis et en opportunités.',
               'name' => 'Vanessa Auger',
-              'description' => 'Technicienne forestière et enseignante',
-              'image' => '/sliders/Vanessa Auger _9617.jpg'
+              'description' => 'Forestry Technician and Teacher',
+              'image' => '/sliders/Vanessa Auger _9617.jpg',
+              'video' => 'wNjjK4C1LHA'
             ],
             'slide6' => [
               'quote' => 'Les avancées technologiques améliorent constamment les conditions des travailleurs, qui sont au cœur des pratiques forestières.',
