Update video vanessa

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -115,7 +115,8 @@ function onStart()
               'quote' => 'Je suis fière de transmettre ma passion à mes étudiants, car je leur permets de découvrir un secteur riche en défis et en opportunités.',
               'name' => 'Vanessa Auger',
               'description' => 'Technicienne forestière et enseignante',
-              'image' => '/sliders/Vanessa Auger _9617.jpg'
+              'image' => '/sliders/Vanessa Auger _9617.jpg',
+              'video' => 'wNjjK4C1LHA'
             ],
             'slide6' => [
               'quote' => 'Les avancées technologiques améliorent constamment les conditions des travailleurs, qui sont au cœur des pratiques forestières.',
@@ -240,7 +241,8 @@ function onStart()
               'quote' => 'I’m proud to pass on my passion to my students, by helping them to discover a sector rich in challenges and opportunities.',
               'name' => 'Vanessa Auger',
               'description' => 'Forestry Technician and Teacher',
-              'image' => '/sliders/Vanessa Auger _9617.jpg'
+              'image' => '/sliders/Vanessa Auger _9617.jpg',
+              'video' => 'wNjjK4C1LHA'
             ],
             'slide6' => [
               'quote' => 'Technological progress continues to improve the conditions of the workers who play such a key role in forestry practice.',
