--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -102,7 +102,8 @@ function onStart()
               'quote' => 'La forêt a toujours fait partie de ma vie et je veux m’impliquer pour qu’elle en fasse partie encore longtemps.',
               'name' => 'Élie Duchesne',
               'description' => 'Étudiante en arpentage',
-              'image' => '/sliders/Elie Duchesne_GA_0981.jpg'
+              'image' => '/sliders/Elie Duchesne_GA_0981.jpg',
+              'video' => 'kmAC_dGZeps'
             ],
             'slide5' => [
               'quote' => 'Je suis fière de transmettre ma passion à mes étudiants, car je leur permets de découvrir un secteur riche en défis et en opportunités.',
@@ -219,7 +220,8 @@ function onStart()
               'quote' => 'La forêt a toujours fait partie de ma vie et je veux m’impliquer pour qu’elle en fasse partie encore longtemps.',
               'name' => 'Élie Duchesne',
               'description' => 'Étudiante en arpentage',
-              'image' => '/sliders/Elie Duchesne_GA_0981.jpg'
+              'image' => '/sliders/Elie Duchesne_GA_0981.jpg',
+              'video' => 'kmAC_dGZeps'
             ],
             'slide5' => [
               'quote' => 'Je suis fière de transmettre ma passion à mes étudiants, car je leur permets de découvrir un secteur riche en défis et en opportunités.',
