--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -236,7 +236,7 @@ function onStart()
               'quote' => 'The forest has always been part of my life and I want to do something to make sure it remains there for many years to come.',
               'name' => 'Élie Duchesne',
               'description' => 'Student Surveyor',
-              'image' => '/sliders/Elie Duchesne_GA_0981.jpg'
+              'image' => '/sliders/Elie Duchesne_GA_0981.jpg',
               'video' => 'kmAC_dGZeps'
             ],
             'slide5' => [
