Update watch the video and more translated string

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -156,7 +156,7 @@ function onStart()
         $this['header'] = [
           'intro' => 'Our forests are greener than ever before, and are a source of pride and innovation.
           They account for nearly 50% of our territory and deserve 100% of our support.',
-          'more' => 'Know more'
+          'more' => 'For additional information'
         ];
 
         $this['statement'] = [
@@ -206,7 +206,7 @@ function onStart()
 
         $this['video'] = [
           'button' => [
-            'label' => 'Watch video'
+            'label' => 'Watch the video'
           ]
         ];
 
