Update english url to jycrois

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -4,7 +4,7 @@ is_hidden = 0
 layout = "default"
 
 [viewBag]
-localeUrl[en] = "/forest"
+localeUrl[en] = "/jycrois"
 
 [localePicker]
 forceUrl = 1
