--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -206,7 +206,7 @@ function onStart()
 
         $this['video'] = [
           'button' => [
-            'label' => 'Watch the video'
+            'label' => 'Watch the video (in french only)'
           ]
         ];
 
@@ -215,36 +215,31 @@ function onStart()
               'quote' => 'The forest is a vast, endlessly renewable garden.',
               'name' => 'Normand Simard',
               'description' => 'Forest Engineer and Supply Manager',
-              'image' => '/sliders/Normand Simard_0529.jpg',
-              'video' => 'Mn1-cwcLBQo'
+              'image' => '/sliders/Normand Simard_0529.jpg'
             ],
             'slide2' => [
               'quote' => 'Developing the forest sector involves harmonizing human and environmental concerns.',
               'name' => 'Alhassane A. Diallo',
               'description' => 'Environment and Forestry Coordinator',
-              'image' => '/sliders/Alhassanea Diallo_1071.jpg',
-              'video' => 'Fu92NPKNjhY'
+              'image' => '/sliders/Alhassanea Diallo_1071.jpg'
             ],
             'slide3' => [
               'quote' => 'Québec’s forest is more than just wood – it’s a source of pride.',
               'name' => 'Yvon Soucy',
               'description' => 'Warden, Kamouraska RCM',
-              'image' => '/sliders/Yvon Soucy_0376.jpg',
-              'video' => 'y4be-_gDrPU'
+              'image' => '/sliders/Yvon Soucy_0376.jpg'
             ],
             'slide4' => [
               'quote' => 'The forest has always been part of my life and I want to do something to make sure it remains there for many years to come.',
               'name' => 'Élie Duchesne',
               'description' => 'Student Surveyor',
-              'image' => '/sliders/Elie Duchesne_GA_0981.jpg',
-              'video' => 'kmAC_dGZeps'
+              'image' => '/sliders/Elie Duchesne_GA_0981.jpg'
             ],
             'slide5' => [
               'quote' => 'I’m proud to pass on my passion to my students, by helping them to discover a sector rich in challenges and opportunities.',
               'name' => 'Vanessa Auger',
               'description' => 'Forestry Technician and Teacher',
-              'image' => '/sliders/Vanessa Auger _9617.jpg',
-              'video' => 'wNjjK4C1LHA'
+              'image' => '/sliders/Vanessa Auger _9617.jpg'
             ],
             'slide6' => [
               'quote' => 'Technological progress continues to improve the conditions of the workers who play such a key role in forestry practice.',
