--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -206,7 +206,7 @@ function onStart()
 
         $this['video'] = [
           'button' => [
-            'label' => 'Watch the video (in french only)'
+            'label' => 'Watch the video <br> (in french only)'
           ]
         ];
 
@@ -353,7 +353,7 @@ function onStart()
                     {% if slider.video %}
                         <a href="#" class="Medias__swiper-slide-content-play">
                         <img src="{{ imgPath }}/play_btn.png">
-                        <p class="Header__play-btn">{{ video.button.label }}</p>
+                        <p class="Header__play-btn">{{ video.button.label|raw }}</p>
                         </a>
                     {% endif %}
                   </div>
