--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -353,7 +353,7 @@ function onStart()
                     {% if slider.video %}
                         <a href="#" class="Medias__swiper-slide-content-play">
                         <img src="{{ imgPath }}/play_btn.png">
-                        <p class="Header__play-btn">{{ video.button.label|raw }}</p>
+                        <p class="Header__play-btn">{{ video.button.label }}</p>
                         </a>
                     {% endif %}
                   </div>
