--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -206,7 +206,7 @@ function onStart()
 
         $this['video'] = [
           'button' => [
-            'label' => 'Watch the video <br> (in french only)'
+            'label' => 'Watch the video <br> (french only)'
           ]
         ];
 
