--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -73,7 +73,8 @@ function onStart()
             'description' => 'Êtes-vous un bûcheron dans l’âme ou plutôt un forestier de salon?  Testez votre niveau de connaissance de la forêt québécoise avec ces miniquiz!'
           ],
           'button' => [
-            'label' => 'FAITES LE TEST'
+            'label' => 'FAITES LE TEST',
+            'url' => '/fr/conservation-des-forets-et-de-la-nature/quiz-sur-la-sylviculture'
           ]
         ];
 
@@ -200,7 +201,8 @@ function onStart()
             'description' => 'Are you a born lumberjack or an armchair forester? Take our mini-quiz to test your knowledge of Québec’s forests!'
           ],
           'button' => [
-            'label' => 'Take the test'
+            'label' => 'Take the test',
+            'url' => '/en/forests-and-nature-conservation-in-quebec/silviculture-quiz'
           ]
         ];
 
@@ -432,7 +434,7 @@ function onStart()
           </div>
 
           <div class="grid-third green-block-quiz-wrapper">
-            <a class="quiz-btn" href="https://uneforetdepossibilites.com/fr/conservation-des-forets-et-de-la-nature/quiz-sur-la-sylviculture">
+            <a class="quiz-btn" href="{{ quiz.button.url }}">
               <span class="quiz-btn-text">{{ quiz.button.label }}</span>
               <svg class="arrow-next-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384.24 209.24"><path d="M279.62,209.24a7,7,0,0,1-4.95-12l85.67-85.67H7a7,7,0,0,1,0-14H360.34L274.67,12a7,7,0,0,1,9.9-9.9l97.62,97.62a7,7,0,0,1,0,9.9l-97.62,97.62A7,7,0,0,1,279.62,209.24Z" style="fill:#fff"/></svg>
             </a>
