Add video slider for fr

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -124,25 +124,29 @@ function onStart()
               'quote' => 'Les avancées technologiques améliorent constamment les conditions des travailleurs, qui sont au cœur des pratiques forestières.',
               'name' => 'Pierre Godin',
               'description' => 'Mécanicien de machines fixes',
-              'image' => '/sliders/Pierre Godin_1267.jpg'
+              'image' => '/sliders/Pierre Godin_1267.jpg',
+              'video' => 'uGK-z0LXGbQ'
             ],
             'slide7' => [
               'quote' => 'Notre forêt, on s’en occupe, car c’est notre avenir!',
               'name' => 'Karine Lévesque',
               'description' => 'Opératrice à la salle de finition et responsable de l’emballage des rouleaux',
-              'image' => '/sliders/Karine Levesque_8970.jpg'
+              'image' => '/sliders/Karine Levesque_8970.jpg',
+              'video' => 'pOf083zFFvo'
             ],
             'slide8' => [
               'quote' => 'Nous avons la responsabilité de nous assurer que la pérennité des écosystèmes soit la priorité dans toutes les facettes de notre travail.',
               'name' => 'Nadia Vaillancourt',
               'description' => 'Biologiste, cueilleuse professionnelle et animatrice-naturaliste',
-              'image' => '/sliders/Nadia Vaillancourt_0675.jpg'
+              'image' => '/sliders/Nadia Vaillancourt_0675.jpg',
+              'video' => 'BHOD72DLDsA'
             ],
             'slide9' => [
               'quote' => 'Enrichir notre territoire, c’est prendre soin de ses ressources et en respecter les différents usages.',
               'name' => 'Jean-Maurice Matte',
               'description' => 'Maire de Senneterre',
-              'image' => '/sliders/7696-UMQ_3984_JeanMaurice_Matte.jpg'
+              'image' => '/sliders/7696-UMQ_3984_JeanMaurice_Matte.jpg',
+              'video' => 'FGoo3suC0NM'
             ]
         ];
 
